Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63147

Qml Text displays corrupted text when font family is set to an empty string and font.pointSize is <= 13

    XMLWordPrintable

Details

    • 1eedfd0e66c7afd682f682a659cda2942485cd08, 5d2b12d71cacf9ccd182f2af2e0882c18d483c5f (additional fix in Qt 5.11)

    Description

      The text gets corrupted if the font.family property is set to an empty string and the font.pointSize property is set to 13 or smaller.

      Steps to reproduce:

      • Run the sample attached

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              esabraha Eskil Abrahamsen Blomfeldt
              risto.sipola Risto Sipola
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes